--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>A la bonne table</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Ceest le site de mon restaurant !<h1>
